objects/SMAX_PS_ProductPlant__c.object
<CustomObject>
    <label>Product Plant</label>
    <nameField>
        <displayFormat>PPNT-{00000000}</displayFormat>
        <label>Product Plant Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Plants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>SMAX_PS_Plant__c</fullName>
        <label>Plant</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BD_Return_Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Return Part</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Plants (Return Part)</relationshipLabel>
        <relationshipName>Product_Plants1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Plants</relationshipLabel>
        <relationshipName>Product_Plants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SMAX_PS_LastTxnNum__c</fullName>
        <label>Last Transaction Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deletion Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_UnitOfIssue__c</fullName>
        <label>Unit Of Issue</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_LoadingGroup__c</fullName>
        <label>Loading Group</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ProfitCenter__c</fullName>
        <label>Profit Center</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BD_Return_Part_Number__c</fullName>
        <label>Return Part Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ABC_Indicator__c</fullName>
        <label>ABC Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_MaterialStatus__c</fullName>
        <label>Plant Specific Material Status</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BD_Credit_Relevant_Part__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Relevant Part</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_CountryOfOrigin__c</fullName>
        <label>Country Of Origin</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ReplacementPart__c</fullName>
        <label>Replacement Part</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SerialNumberProfile__c</fullName>
        <label>Serial Number Profile</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_MaterialStatusValidFrom__c</fullName>
        <label>Plant Specific Material Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_PlannedDeliveryTimeInDays__c</fullName>
        <label>Delivery Time In Days</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_BatchManagementReqIndicator__c</fullName>
        <label>Batch Managed</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_CheckingGrpForAvailabilityCheck__c</fullName>
        <label>Checking Group For Availability Check</label>
        <length>2</length>
        <type>Text</type>
    </fields>
</CustomObject>